add nearby user recommendation
